<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.bailey.flood_it.NewGameActivity">

    <ImageView
        android:id="@+id/imageHolder"
        android:layout_width="389dp"
        android:layout_height="270dp"
        android:layout_marginBottom="420dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/nG_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/background_light" />

    <TextView
        android:id="@+id/textGameSize"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nG_selectGm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <RadioGroup
        android:id="@+id/radiogroupSize"
        android:layout_width="189dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation='vertical'
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp">

        <RadioButton
            android:id="@+id/radiobuttonSize1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nG_easy" />

        <RadioButton
            android:id="@+id/radiobuttonSize2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nG_medium" />

        <RadioButton
            android:id="@+id/radiobuttonSize3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nG_hard" />

        <RadioButton
            android:id="@+id/radiobuttonSize4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nG_extreme" />
    </RadioGroup>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="144dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="4dp"
        android:text="@string/nG_nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="4dp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edittextPlayer"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nG_nameHint"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="232dp"
        android:text="@string/nG_applyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
