<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hs_highScores"
        android:textAlignment="center"
        android:textSize="34sp" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="56dp"
        android:text="@string/hs_medium"
        app:layout_constraintStart_toEndOf="@+id/buttonEasy"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/hs_easy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listHs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedium" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="56dp"
        android:text="@string/hs_hard"
        app:layout_constraintStart_toEndOf="@+id/buttonMedium"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/buttonExtreme"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="56dp"
        android:text="@string/hs_extreme"
        app:layout_constraintStart_toEndOf="@+id/buttonHard"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="3dp" />

</android.support.constraint.ConstraintLayout>

