<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.bailey.flood_it.ThemesActivity">

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="391dp"
        android:layout_height="457dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/tA_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/background_light"
        android:layout_marginRight="8dp" />


    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/tA_choose"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <RadioGroup
        android:id="@+id/radioThemeSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioTheme1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioTheme2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioTheme3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioTheme4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageTheme1"
        android:layout_width="300dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle1"
        app:srcCompat="@mipmap/theme1"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="55dp"
        android:contentDescription="@string/tA_preview1" />

    <ImageView
        android:id="@+id/imageTheme2"
        android:layout_width="300dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle1"
        app:srcCompat="@mipmap/theme2"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="55dp"
        android:contentDescription="@string/tA_preview2" />

    <ImageView
        android:id="@+id/imageTheme3"
        android:layout_width="300dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle1"
        app:srcCompat="@mipmap/theme3"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="55dp"
        android:contentDescription="@string/tA_preview3" />

    <ImageView
        android:id="@+id/imageTheme4"
        android:layout_width="300dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="109dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle1"
        app:srcCompat="@mipmap/theme4"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="55dp"
        android:contentDescription="@string/tA_preview4" />

    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="170dp"
        android:text="@string/tA_previewText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="224dp"
        android:layout_height="201dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/themepreview1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="30dp"
        android:contentDescription="@string/tA_previewImage" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:text="@string/tA_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagePreview" />



</android.support.constraint.ConstraintLayout>
