<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.bailey.flood_it.MainMenu">


    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="346dp"
        android:layout_height="80dp"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:onClick="openGameActivity"
        android:text="@string/mM_newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        android:layout_marginRight="54dp"
        android:layout_marginLeft="52dp" />

    <Button
        android:id="@+id/buttonHighscores"
        android:layout_width="346dp"
        android:layout_height="80dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:onClick="openHighscoresActivity"
        android:text="@string/mM_highScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewGame"
        android:layout_marginRight="53dp"
        android:layout_marginLeft="52dp" />

    <Button
        android:id="@+id/buttonThemes"
        android:layout_width="346dp"
        android:layout_height="80dp"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:onClick="openThemesActivity"
        android:text="@string/mM_themes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHighscores"
        android:layout_marginRight="54dp"
        android:layout_marginLeft="52dp" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mM_Title"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
